--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-flask
-pandas
-sentence-transformers
-vaderSentiment
-torch
-textblob
+streamlit==1.33.0
+pandas==2.2.1
+sentence-transformers==2.2.2
+transformers==4.39.3
+torch==2.2.2
+vaderSentiment==3.3.2
+textblob==0.17.1
+deep-translator==1.11.4
+scikit-learn==1.4.2
+joblib==1.4.2
+protobuf==4.25.3
